uploading all files

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,6 @@
-<div class="login-container">
-    <h2>Login to Spotify</h2>
-    <form (ngSubmit)="login()">
-        <div>
-            <label for="username">Username:</label>
-            <input type="text" id="username" [(ngModel)]="username" name="username" required>
-        </div>
-        <div>
-            <label for="password">Password:</label>
-            <input type="password" id="password" [(ngModel)]="password" name="password" required>
-        </div>
-        <button type="submit">Login with Spotify</button>
+<div>
+    <h2>Login</h2>
+    <form (submit)="login()">
+        <button type="submit">Login to Spotify</button>
     </form>
 </div>
