--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,1 @@
-<h1>Welcome to Your Spotify App!</h1>
-<p>You are successfully logged in.</p>
+<app-grid [items]="albums" (viewSongs)="viewSongs($event)"></app-grid>
