--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+
+  
+  /* Dark theme */
+  body {
+    background-color: white !important;
+    color: black !important;
+  }
+  
+  /* Dark theme */
+  body.dark {
+    background-color: black !important;
+    color: white !important;
+  }
+  
+  /* Button to toggle themes */
+  .theme-toggle {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    padding: 10px;
+    cursor: pointer;
+  }
+  
